k8s_configs/keycloak-proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-dashboard-proxy
    spec:
      containers:
      - image: quay.io/gambol99/keycloak-proxy:v2.2.2
        name: kubernetes-dashboard-proxy
        args:
          - --listen=0.0.0.0:3000
          - --discovery-url=https://idp.k8s.expllore.me.uk/auth/realms/hello
          - --client-id=kubernetes
          - --client-secret=dc96a5f6-a723-480c-a73b-8abcec67ef54
          - --redirection-url=https://dashboard.k8s.expllore.me.uk
          - --enable-refresh-tokens=true
          - --encryption-key=MsVRjD36bfAxfBvHUKUjXOTPXaItDThn    # 32 bytes string
          - --upstream-url=https://k8s-dashboard-kubernetes-dashboard.kube-system.svc.cluster.local
          - --resources=uri=/*
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /oauth/health
            port: 3000
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /oauth/health
            port: 3000
          initialDelaySeconds: 3
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: kubernetes-dashboard-proxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kube-system
spec:
  tls:
  - hosts:
    - dashboard.k8s.expllore.me.uk
    secretName: certificate-prod-dashboard
  rules:
  - host: dashboard.k8s.expllore.me.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard-proxy
          servicePort: 3000
