k8s_configs/oauth2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kube-system
spec:
  rules:
  - host: dashboard.k8s.expllore.me.uk
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy-dashboard
          servicePort: 80
        path: /oauth2
  tls:
  - hosts:
    - dashboard.k8s.expllore.me.uk
    secretName: certificate-prod-dashboard
